--- a/book-a-reading-room-visit.web/Views/Shared/_Header.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Header.cshtml
@@ -7,9 +7,6 @@
                 <a tabindex="2" href="https://www.nationalarchives.gov.uk" title="Go to The National Archives homepage"
                    class="visible-lg visible-md visible-sm">
                     <img src="~/images/logo-white.png" alt="The National Archives" class="img-responsive logo" />
-                    @*<img src="<?php echo str_replace( home_url(), '', get_template_directory_uri() ); ?>/img/logo-white.png"
-                        srcset="<?php echo str_replace( home_url(), '', get_template_directory_uri() ); ?>/img/tna-horizontal-white-logo.svg"
-                        alt="The National Archives" class="img-responsive logo">*@
                 </a>
             </div>
             <div class="col-xs-8 col-sm-2" id="mobile-logo-holder">
@@ -19,10 +16,7 @@
                 </button>
                 <a href="https://www.nationalarchives.gov.uk" title="Go to The National Archives homepage"
                    class="hidden-lg hidden-md hidden-sm">
-                    <img src="~/images/logo-white.png" alt="The National Archives" class="img-responsive">/>
-                    @*<img src="<?php echo str_replace( home_url(), '', get_template_directory_uri() ); ?>/img/logo-white.png"
-                        srcset="<?php echo str_replace( home_url(), '', get_template_directory_uri() ); ?>/img/tna-horizontal-white-logo.svg"
-                        alt="The National Archives" class="img-responsive">*@
+                    <img src="~/images/logo-white.png" alt="The National Archives" class="img-responsive" />
                 </a>
             </div>
             @*<?php include 'inc/global-search-desktop.php' ?>*@
