--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -5,26 +5,58 @@
 section.container {
     background-color: #fff;
     margin-top: 2.4em;
+    padding: 4em 2em 2em 2em;
 }
 
 .order-options {
-    section {
-        border: 2px black solid;
+    section.col-md-6 {
         display: inline-block;
-        margin: 1em;
-        padding: 1em;
+        margin: 2em 0;
 
-        ul {
-            li {
-                list-style: none;
-                text-align: left;
+        .card {
+            background-color: #eee;
+            border: 2px #ddd solid;
+
+            ul {
+                li {
+                    list-style: none;
+                    text-align: left;
+                    margin-bottom: 1em;
+
+                    &:before {
+                        content: "- ";
+                    }
+                }
+            }
+
+            a.button {
+                margin-bottom: 1em;
+                text-decoration: none;
+            }
+
+            .order-option-heading {
+                min-height: 100px;
             }
         }
+    }
 
-        .order-option-heading {
-            min-height: 100px;
+    #computer-only {
+        background-color: #fff;
+        border: 2px #ddd solid;
+        padding-bottom: 1em;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .order-options {
+        section.col-md-6 {
+            width: 100%;
         }
     }
+}
+
+.prompt {
+    font-weight: bold;
 }
 
 .order-options + section {
