Add class to heading text for styling purposes

--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <section class="container">
 
         <section>
-            <div>
+            <div class="container-heading-text">
                 <p>
                     To reserve a place, you will need your reader's ticket number and to know how many documents you would like to see.
                     You can then choose an available date to view documents in our reading rooms.
