--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -15,9 +15,11 @@
 </head>
 <body>
     @Html.Partial("_Header")
+    
 
     <main role="main" class="pb-3">
         <div class="container">
+            @Html.Partial("_Breadcrumbs")
             @RenderBody()
         </div>
     </main>
