--- a/book-a-reading-room-visit.web/Views/DocumentOrder/DocumentOrder.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/DocumentOrder.cshtml
@@ -1,6 +1,8 @@
-﻿@{
+﻿@using book_a_reading_room_visit.web.Models;
+@{
     ViewData["Title"] = "Manage document order";
 }
+@model BookingViewModel
 
 <div class="text-center">
     <h1 class="display-4">Welcome to book a reading room visit</h1>
