--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -7881,12 +7881,20 @@ section.container .container-heading, section.container .container-heading-text 
     width: 100%;
   }
 }
+.order-options + section {
+  clear: both;
+}
+
 .prompt {
   font-weight: bold;
 }
 
-.order-options + section {
-  clear: both;
+.reservation-options a.button {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  max-width: 245px;
+  min-height: 70px;
 }
 
 #booking-date {
