--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -1,6 +1,8 @@
-﻿@{
+﻿@using book_a_reading_room_visit.web.Models;
+@{
     ViewData["Title"] = "Booking confirmation";
 }
+@model BookingViewModel
 
 <h1 class="display-4">Book a visit to view our documents</h1>
 
@@ -38,11 +40,11 @@
         <section class="reservation-options col-md-6 col-md-offset-3 col-sm-offset-4">
             <div class="row">
                 <div class="col-md-6">
-                    <a class="button primary" href="/book-a-visit/order-documents">Continue booking now</a>
+                    <a class="button primary" href="/@Model.OrderType.ToStringURL()/order-documents">Continue booking now</a>
                 </div>
 
                 <div class="col-md-6">
-                     <a class="button primary" href="/book-a-visit/availability">I'd like to continue later</a>
+                    <a class="button primary" href="/book-a-visit/availability">I'd like to continue later</a>
                 </div>
             </div>
         </section>
