Refactor booking confirmation screen

--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -37,15 +37,15 @@
             </div>
         </section>
 
-        <section class="reservation-options col-md-6 col-md-offset-3 col-sm-offset-4">
+        <section class="reservation-options col-md-6 col-md-offset-3">
             <div class="row">
-                <div class="col-md-6">
+                <span class="col-md-6">
                     <a class="button primary" href="/@Model.OrderType.ToStringURL()/order-documents">Continue booking now</a>
-                </div>
+                </span>
 
-                <div class="col-md-6">
-                    <a class="button primary" href="/book-a-visit/availability">I'd like to continue later</a>
-                </div>
+                <span class="col-md-6">
+                    <a class="button primary" href="/">I'd like to continue later</a>
+                </span>
             </div>
         </section>
     </section>
