Add availability screen (lacks styling)

--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -7916,6 +7916,10 @@ section.container .container-heading, section.container .container-heading-text 
   min-height: 70px;
 }
 
+#availability-form div ul li {
+  list-style: none;
+}
+
 #booking-date {
   display: block;
   font-weight: bold;
