--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -116,6 +116,16 @@ section.container {
     }
 }
 
+#availability-form {
+    div {
+        ul {
+            li {
+                list-style: none;
+            }
+        }
+    }
+}
+
 #booking-date {
     display: block;
     font-weight: bold;
