--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -1,29 +1,120 @@
 ﻿@using book_a_reading_room_visit.web.Models;
 
 @{
-    ViewData["Title"] = "Home Page - Page 2";
+    ViewData["Title"] = "Visit availability";
 }
 
 @model OrderType
 
+<h1 class="display-4">Welcome to book a reading room visit</h1>
+
 <div class="text-center">
-    <h1 class="display-4">Welcome to book a reading room visit</h1>
-    <p>Page 2 of 5</p>
 
-    @if (Model == OrderType.StandardOrderVisit)
-    {
-        <p>
-            <a class="button primary" href="/bulk-order-visit/availability">Bulk order visit availability</a>
-        </p>
-    }
-    else
-    {
-        <p>
-            <a class="button primary" href="/standard-order-visit/availability">Standard order visit availability</a>
-        </p>
-    }
+    <section class="container">
+        <section>
+            <div class="row">
+                <div class="col-md-4">
+                    @if (Model == OrderType.StandardOrderVisit)
+                    {
+                        <h2>Standard visit availability</h2>
+                    }
 
-    <div>
-        <a class="button primary" href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Tuesday 14 February</a>
-    </div>
+                    else
+                    {
+                        <h2>Bulk visit availability</h2>
+                    }
+                    </div>
+
+                <div class="col-md-8">
+
+                    @if (Model == OrderType.StandardOrderVisit)
+                    {
+                        <a class="button primary" href="/bulk-order-visit/availability">Bulk order visit availability</a>
+                    }
+
+                    else
+                    {
+                        <a class="button primary" href="/standard-order-visit/availability">Standard order visit availability</a>
+                    }
+
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row">
+                <form id="availability-form" action="/" method="GET">
+                    <div class="col-md-4">
+                        <section class="room-selection">
+                            <fieldset>
+                                <label for="standard-room">Standard reading room</label>
+                                <input name="standard-room" id="standard-room" type="radio" />
+                            </fieldset>
+
+                            <fieldset>
+                                <label for="map-and-lg-room">Map and large document</label>
+                                <input name="map-and-lg-room" id="map-and-lg-room" type="radio" />
+                            </fieldset>
+                        </section>
+                        <section class="visit-selection">
+                            <fieldset>
+                                <label for="one-day-visit">One-day visit</label>
+                                <input name="one-day-visit" id="one-day-visit" type="radio" />
+                            </fieldset>
+
+                            <fieldset>
+                                <label for="two-day-visit">Two-day visit</label>
+                                <input name="two-day-visit" id="two-day-visit" type="radio" />
+                            </fieldset>
+                        </section>
+                    </div>
+
+                    <div class="col-md-8">
+                        <ul>
+                            <li>
+                                <a class="button primary"
+                                   href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Tuesday 15 February</a>
+                            </li>
+                            <li>
+                                <a class="button primary" h
+                                   ref="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Wednesday 16 February</a>
+                            </li>
+                            <li>
+                                <a class="button primary"
+                                   href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Thursday 17 February</a>
+                            </li>
+                            <li>
+                                <a class="button primary"
+                                   href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Friday 18 February</a>
+                            </li>
+                            <li>
+                                <a class="button primary"
+                                   href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Saturday 19 February</a>
+                            </li>
+                            <li>
+                                <a class="button primary"
+                                   href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Tuesday 22 February</a>
+                            </li>
+                            <li>
+                                <a class="button primary"
+                                   href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Wednesday 23 February</a>
+                            </li>
+                            <li>
+                                <a class="button primary"
+                                   href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Thursday 24 February</a>
+                            </li>
+                            <li>
+                                <a class="button primary"
+                                   href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Friday 25 February</a>
+                            </li>
+                            <li>
+                                <a class="button primary"
+                                   href="/@Model.ToStringURL()/secure-booking/@Guid.NewGuid().ToString()">Saturday 26 February</a>
+                            </li>
+                        </ul>
+                    </div>
+                </form>
+            </div>
+        </section>
+    </section>
 </div>
