--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -7826,6 +7826,10 @@ main {
   background-color: #eee;
 }
 
+.button:focus {
+  color: #fff;
+}
+
 a.button {
   margin-bottom: 1em;
   text-decoration: none;
@@ -7859,6 +7863,15 @@ section.container .container-heading, section.container .container-heading-text 
 }
 .booking-summary p {
   margin: 0 0 10px;
+}
+
+.date-selection ul li a {
+  background-color: #eee;
+  border: 2px solid #ddd;
+  width: 80%;
+}
+.date-selection ul li a div p {
+  margin-bottom: 0;
 }
 
 .order-options section.col-md-6 {
@@ -7918,11 +7931,65 @@ section.container .container-heading, section.container .container-heading-text 
 
 #availability-form div ul li {
   list-style: none;
+  text-align: right;
+}
+#availability-form #dates input[type=radio] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+#availability-form #dates label {
+  display: flex;
+  background-color: #eee;
+  padding: 10px 20px;
+  font-family: "Roboto Mono", sans-serif;
+  font-size: 16px;
+  border: 2px solid #ddd;
+  margin-bottom: 1em;
+}
+#availability-form #dates label:hover {
+  background-color: #000;
+  color: #fff;
+  cursor: pointer;
+}
+#availability-form #dates input[type=radio]:focus + label {
+  outline: 5px solid #1d70b8;
+}
+#availability-form #dates input[type=radio]:checked + label {
+  background-color: #000;
+  color: #fff;
 }
 
 #booking-date {
   display: block;
   font-weight: bold;
+}
+
+#camera-stand-fieldset {
+  margin-left: 2em;
+}
+#camera-stand-fieldset label {
+  width: 80%;
+}
+
+#room-selection {
+  border-bottom: 2px solid #eee;
+}
+
+#room-selection, #visit-selection {
+  margin-top: 2em;
+}
+#room-selection fieldset:last-child, #visit-selection fieldset:last-child {
+  padding-bottom: 1em !important;
+}
+
+#visit-customisation-form input[type=radio], #visit-customisation-form input[type=checkbox] {
+  float: left;
+}
+
+#visit-type-toggle {
+  margin-top: 2em;
+  text-align: right;
 }
 
 @media screen and (max-width: 992px) {
