--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -2,6 +2,10 @@
     background-color: #eee;
 }
 
+.button:focus {
+    color: #fff;
+}
+
 a.button {
     margin-bottom: 1em;
     text-decoration: none;
@@ -43,6 +47,24 @@ section.container {
 
     p {
         margin: 0 0 10px;
+    }
+}
+
+.date-selection {
+    ul {
+        li {
+            a {
+                background-color: #eee;
+                border: 2px solid #ddd;
+                width: 80%;
+
+                div {
+                    p {
+                        margin-bottom: 0;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -121,14 +143,77 @@ section.container {
         ul {
             li {
                 list-style: none;
+                text-align: right;
             }
         }
+    }
+
+    #dates input[type=radio] {
+        opacity: 0;
+        position: fixed;
+        width: 0;
+    }
+
+    #dates label {
+        display: flex;
+        background-color: #eee;
+        padding: 10px 20px;
+        font-family: "Roboto Mono", sans-serif;
+        font-size: 16px;
+        border: 2px solid #ddd;
+        margin-bottom: 1em;
+    }
+
+    #dates label:hover {
+        background-color: #000;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    #dates input[type=radio]:focus + label {
+        outline: 5px solid #1d70b8;
+    }
+
+    #dates input[type=radio]:checked + label {
+        background-color: #000;
+        color: #fff;
     }
 }
 
 #booking-date {
     display: block;
     font-weight: bold;
+}
+
+#camera-stand-fieldset {
+    margin-left: 2em;
+
+    label {
+        width: 80%;
+    }
+}
+
+#room-selection {
+    border-bottom: 2px solid #eee;
+}
+
+#room-selection, #visit-selection {
+    margin-top: 2em;
+
+    fieldset:last-child {
+        padding-bottom: 1em !important;
+    }
+}
+
+#visit-customisation-form {
+    input[type=radio], input[type=checkbox] {
+        float: left;
+    }
+}
+
+#visit-type-toggle {
+    margin-top: 2em;
+    text-align: right;
 }
 
 @media screen and (max-width: 992px) {
