Amend availability screen styling

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -121,7 +121,7 @@
 
                             <label for="date-5">
                                 <span class="col-md-6">Saturday 19 February</span>
-                               <span class="col-md-6">X spaces available</span>
+                                <span class="col-md-6">X spaces available</span>
                             </label>
 
                             <input type="radio" id="date-6" name="date" value="something">
@@ -153,6 +153,11 @@
                             </label>
 
                             <input type="radio" id="date-10" name="date" value="something">
+
+                            <label for="date-10">
+                                <span class="col-md-6">Saturday 26 February</span>
+                                <span class="col-md-6">X spaces available</span>
+                            </label>
                         </fieldset>
 
                         <button class="button" type="submit">Submit</button>
