--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -7933,11 +7933,6 @@ section.container .container-heading, section.container .container-heading-text 
   list-style: none;
   text-align: right;
 }
-#availability-form #dates input[type=radio] {
-  opacity: 0;
-  position: fixed;
-  width: 0;
-}
 #availability-form #dates label {
   display: flex;
   background-color: #eee;
@@ -7951,6 +7946,17 @@ section.container .container-heading, section.container .container-heading-text 
   background-color: #000;
   color: #fff;
   cursor: pointer;
+}
+#availability-form #dates label span:first-child {
+  text-align: left;
+}
+#availability-form #dates label span:last-child {
+  text-align: right;
+}
+#availability-form #dates input[type=radio] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
 }
 #availability-form #dates input[type=radio]:focus + label {
   outline: 5px solid #1d70b8;
@@ -7985,6 +7991,9 @@ section.container .container-heading, section.container .container-heading-text 
 
 #visit-customisation-form input[type=radio], #visit-customisation-form input[type=checkbox] {
   float: left;
+}
+#visit-customisation-form button[type=submit] {
+  margin-bottom: 2em;
 }
 
 #visit-type-toggle {
