--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -148,35 +148,57 @@ section.container {
         }
     }
 
-    #dates input[type=radio] {
-        opacity: 0;
-        position: fixed;
-        width: 0;
+    #dates {
+        label {
+            display: flex;
+            background-color: #eee;
+            padding: 10px 20px;
+            font-family: "Roboto Mono", sans-serif;
+            font-size: 16px;
+            border: 2px solid #ddd;
+            margin-bottom: 1em;
+        }
     }
 
-    #dates label {
-        display: flex;
-        background-color: #eee;
-        padding: 10px 20px;
-        font-family: "Roboto Mono", sans-serif;
-        font-size: 16px;
-        border: 2px solid #ddd;
-        margin-bottom: 1em;
+    #dates {
+        label:hover {
+            background-color: #000;
+            color: #fff;
+            cursor: pointer;
+        }
     }
 
-    #dates label:hover {
-        background-color: #000;
-        color: #fff;
-        cursor: pointer;
+    #dates {
+        label {
+            span:first-child {
+                text-align: left;
+            }
+
+            span:last-child {
+                text-align: right;
+            }
+        }
     }
 
-    #dates input[type=radio]:focus + label {
-        outline: 5px solid #1d70b8;
+    #dates {
+        input[type=radio] {
+            opacity: 0;
+            position: fixed;
+            width: 0;
+        }
     }
 
-    #dates input[type=radio]:checked + label {
-        background-color: #000;
-        color: #fff;
+    #dates {
+        input[type=radio]:focus + label {
+            outline: 5px solid #1d70b8;
+        }
+    }
+
+    #dates {
+        input[type=radio]:checked + label {
+            background-color: #000;
+            color: #fff;
+        }
     }
 }
 
@@ -208,6 +230,10 @@ section.container {
 #visit-customisation-form {
     input[type=radio], input[type=checkbox] {
         float: left;
+    }
+
+    button[type=submit] {
+        margin-bottom: 2em;
     }
 }
 
